--- a/v1/services/UserService/src/main/resources/META-INF/resources/index.html
+++ b/v1/services/UserService/src/main/resources/META-INF/resources/index.html
@@ -131,11 +131,12 @@
             <li>Quarkus now ships with a <a href="/q/dev/">Dev UI</a> (available in dev mode only)</li>
             <li>Play with the provided code located in <code>src/main/kotlin</code>:</li>
         </ul>
-                <div class="provided-code">
+        <div class="provided-code">
             <h3>RESTEasy Reactive</h3>
             <p>Easily start your Reactive RESTful Web Services</p>
-            <p><code>@Path: <a href="/hello" class="path-link" target="_blank">/hello</a></code></p>
-            <p><a href="https://quarkus.io/guides/getting-started-reactive#reactive-jax-rs-resources" class="guide-link" target="_blank">Related guide section...</a></p>
+            <p><code>@Path: <a class="path-link" href="/hello" target="_blank">/hello</a></code></p>
+            <p><a class="guide-link" href="https://quarkus.io/guides/getting-started-reactive#reactive-jax-rs-resources"
+                  target="_blank">Related guide section...</a></p>
         </div>
 
     </div>
@@ -158,7 +159,8 @@
         <div class="right-section">
             <h3>Selected extensions guides</h3>
             <ul>
-                <li title="Write your services in Kotlin"><a href="https://quarkus.io/guides/kotlin" target="_blank">Kotlin guide</a></li>
+                <li title="Write your services in Kotlin"><a href="https://quarkus.io/guides/kotlin" target="_blank">Kotlin
+                    guide</a></li>
             </ul>
         </div>
         <div class="right-section">
